--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "TOKEN": "Nzc3NDA5NDk5Mjc0OTM2MzQz.X7DBBA.9Ib6zea5gPn2KkaJn5fKKW05Au8",
+  "TOKEN": "",
   "CHANNEL_WELCOME": "777412313602719787",
   "ROLES_WELCOME": ["",""]
 }
